Ejercicios de la sesión 1 de la P4 hechos

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,19 @@
 /Civitas/build
 /Civitas/build.xml
 /Civitas/manifest.mf
-/EjerciciosJava/nbproject/private/
-/EjerciciosJava/build/
 
-/EjerciciosRuby/idea
+/EjerciciosJavaP2/nbproject
+/EjerciciosJavaP2/build
+/EjerciciosJavaP2/build.xml
+/EjerciciosJavaP2/manifest.mf
+
+/EjerciciosRubyP3/nbproject
+/EjerciciosRubyP3/build
+/EjerciciosRubyP3/build.xml
+/EjerciciosRubyP3/manifest.mf
+
+/EjerciciosJavaP4/nbproject
+/EjerciciosJavaP4/build
+/EjerciciosJavaP4/build.xml
+/EjerciciosJavaP4/manifest.mf
+/EjerciciosJavaP1/nbproject/private/
