Código del examen 1 prácticas (temario hasta la P3 inclusive) añadido

--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,27 @@
 /Civitas/build.xml
 /Civitas/manifest.mf
 
+/EjerciciosJavaP1/nbproject
+/EjerciciosJavaP1/build
+/EjerciciosJavaP1/build.xml
+/EjerciciosJavaP1/manifest.mf
+
 /EjerciciosJavaP2/nbproject
 /EjerciciosJavaP2/build
 /EjerciciosJavaP2/build.xml
 /EjerciciosJavaP2/manifest.mf
 
-/EjerciciosRubyP3/nbproject
-/EjerciciosRubyP3/build
-/EjerciciosRubyP3/build.xml
-/EjerciciosRubyP3/manifest.mf
+/EjerciciosRubyP3/.idea
 
 /EjerciciosJavaP4/nbproject
 /EjerciciosJavaP4/build
 /EjerciciosJavaP4/build.xml
 /EjerciciosJavaP4/manifest.mf
 /EjerciciosJavaP1/nbproject/private/
+/Examen(1)/Examen/build/
+/Examen(1)/Examen/nbproject/private/
+/Parcial 1 Prácticas/Examen/build/
+/Parcial 1 Prácticas/Examen/nbproject/private/
+/Examen/build/
+/Examen/nbproject/private/
+/Parcial1Practicas/nbproject/private/
